cmake_minimum_required(VERSION 3.12)
project(DnaProject)

set(CMAKE_CXX_STANDARD 98)

add_executable(DnaProject Tests/main1.cpp model/Nucleotid.h model/Nucleotid.cpp model/dnaSequence.cpp model/dnaSequence.h model/IDnaSequence.h model/Shared_pointer.h Tests/Tests.cpp Tests/Tests.h model/DnaData.h model/ReadFile.cpp model/ReadFile.h model/WriteFile.cpp model/WriteFile.h view/CLI.cpp view/CLI.h view/UI.h model/DnaData.cpp controller/Parser.cpp controller/Parser.h controller/Icommand.h model/MetaData.cpp model/MetaData.h controller/NewCommand.cpp controller/NewCommand.h controller/RunCommands.cpp controller/RunCommands.h controller/main.cpp controller/Factory.cpp controller/Factory.h controller/Icommand.cpp controller/LoadCommand.cpp controller/LoadCommand.h controller/SaveCommand.cpp controller/SaveCommand.h controller/ShowCommand.cpp controller/ShowCommand.h controller/ListCommand.cpp controller/ListCommand.h model/DnaSeqPair.cpp model/DnaSeqPair.h controller/PairCommand.cpp controller/PairCommand.h)